--- a/main-page/main-page.css
+++ b/main-page/main-page.css
@@ -27,6 +27,10 @@
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
+    -webkit-transform: translate(50%);
+    -moz-transform: translate(50%);
+    -ms-transform: translate(50%);
+    -o-transform: translate(50%);
 }
 
 .container-fluid {
@@ -119,6 +123,10 @@
     position: absolute;
     top: -1px;
     left: -75%;
+    -webkit-transform: translateX(50%);
+    -moz-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    -o-transform: translateX(50%);
 }
 
 .welcome__background-vector-left {
@@ -131,6 +139,10 @@
     background-size: cover;
     bottom: 0;
     right: 0;
+    -webkit-transform: translate(50%);
+    -moz-transform: translate(50%);
+    -ms-transform: translate(50%);
+    -o-transform: translate(50%);
 }
 
 .welcome__background-vector-cup {
@@ -635,7 +647,11 @@
         transform: translate(50%);
         right: -18%;
         background-size: contain;
-    }
+        -webkit-transform: translate(50%);
+        -moz-transform: translate(50%);
+        -ms-transform: translate(50%);
+        -o-transform: translate(50%);
+}
     .welcome .welcome__background-vector-cup {
         bottom: 15%;
         right: -4%;
@@ -645,7 +661,7 @@
         position: fixed;
         top: 13%;
         left: 50%;
-        transform: translate(-50%, -13%);
+        /* transform: translate(-50%, -13%); */
         width: 340px;
         padding: 28px;
         flex-direction: column;
@@ -658,7 +674,11 @@
         -o-border-radius: 10px;
         gap: 0;
         z-index: 10;
-    }
+        /* -webkit-transform: translate(-50%, -13%);
+        -moz-transform: translate(-50%, -13%);
+        -ms-transform: translate(-50%, -13%);
+        -o-transform: translate(-50%, -13%); */
+}
     .navbar-top > .nav__item {
         padding-top: 17px;
         padding-bottom: 17px;
