fix: butger menu

--- a/main-page/main-page.css
+++ b/main-page/main-page.css
@@ -659,9 +659,9 @@
     .navbar-top {
         margin: 0;
         position: fixed;
-        top: 13%;
+        top: 50px;
         left: 50%;
-        /* transform: translate(-50%, -13%); */
+        transform: translate(-50%, 0);
         width: 340px;
         padding: 28px;
         flex-direction: column;
@@ -674,10 +674,10 @@
         -o-border-radius: 10px;
         gap: 0;
         z-index: 10;
-        /* -webkit-transform: translate(-50%, -13%);
-        -moz-transform: translate(-50%, -13%);
-        -ms-transform: translate(-50%, -13%);
-        -o-transform: translate(-50%, -13%); */
+        -webkit-transform: translate(-50%, 0);
+        -moz-transform: translate(-50%, 0);
+        -ms-transform: translate(-50%, 0);
+        -o-transform: translate(-50%, 0);
 }
     .navbar-top > .nav__item {
         padding-top: 17px;
