--- a/main-page/main-page.css
+++ b/main-page/main-page.css
@@ -658,7 +658,7 @@
     }
     .navbar-top {
         margin: 0;
-        position: fixed;
+        position: absolute;
         top: 13%;
         left: 50%;
         transform: translate(-50%, -13%);
