fix: butger menu

--- a/main-page/main-page.css
+++ b/main-page/main-page.css
@@ -665,7 +665,7 @@
     }
     .navbar-top {
         margin: 0;
-        position: absolute;
+        position: fixed;
         top: 150%;
         left: 50%;
         transform: translate(-50%, -13%);
